# Projek-baru-2

./: .gitignore
backend/: build.sh  download_nltk_data.py  pyproject.toml  render.yaml  requirements.txt  startup.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/ml/: predictor.py  preprocess.py  stopwords_custom.py
backend/app/models/: label_encoder.joblib  linear_svm_model.joblib  tfidf_vectorizer.joblib  tokenizer_nn.pkl
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: LandingPage.css  LandingPage.tsx  LandingPageNew.css  LanguageToggle.css  LanguageToggle.tsx  PredictForm.tsx  ResultCard.tsx
frontend/src/contexts/: LanguageContext.tsx
